crates/rlf-macros/tests/fail/match_missing_default.rs
use rlf::rlf;

rlf! {
    cards($n) = :match($n) { 1: "a card", other: "{$n} cards" };
}

fn main() {}
